--- a/lankar/index.html
+++ b/lankar/index.html
@@ -168,7 +168,7 @@
         </ul>
     </nav>
     <div class="contentindex">
-        <p id="brödtext">Hej! <br> <br> Här hittar du den information om EU du söker, vare sig det handlar om länder, historia, eller vad du nu vill veta. Klicka på flikarna för att finna din information.</p>
+        <p id="brödtext">Hej! <br> <br> Här hittar du kort den information om EU du söker, vare sig det handlar om länder, historia, eller vad du nu vill veta. Klicka på flikarna för att finna din information.</p>
         <h3 id="karttext">Kan du hitta det land du söker?</h3>
         <img id="beskrivning" src="../images/information.png" alt="Vit = Inte medlem , Blå = Medlem">
         <div class="karta container container--ph">
