--- a/lankar/lander/danmark.html
+++ b/lankar/lander/danmark.html
@@ -167,7 +167,7 @@
     <div class="content">
            <div class="fakta">
                <h2>Danmark</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>              
+               <p>Danmark är ett land i den den centrala norra delen av Europa. Det klassas som ett av de nordiska länderna, samt ett av de skandinaviska länderna tillsammans med Norge och Sverige. Landet har trots detta endast en landsgräns, som är till Tyskland. De andra landsgränserna är på vattnet, dvs gränserna till Norge och Sverige </p>              
                <div class="Flagga1"><img src="../../images/länder/Danmark.png" alt="Danmarks flagga" id="flagga"><figcaption>Så här ser Danmarks flagga ut</figcaption></div>
                <div class="Flagga2"><img src="../../images/länder/denmark-23570_640.png" alt="Danmark" id="flagga"><figcaption>Så här ser Danmark ut</figcaption></div>
            </div>
