--- a/lankar/lander/estland.html
+++ b/lankar/lander/estland.html
@@ -167,7 +167,10 @@
     <div class="content">
            <div class="fakta">
                <h2>Estland</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Estland är ett av de tre länder i Baltikum, lokaliserat på östersjöns sydöstra sida och gränsar till Lettland och Ryssland. Det har även den finska viken till norr och Finland ligger över den. Det tillhörde länge, liksom de andra Baltiska länderna, Ryssland, men har sedan en längre tid varit självständigt.
+            </p>
+                <div class="Flagga1"><img src="../../images/länder/Estland.png" alt="Estlands flagga" id="flagga"><figcaption>Så här ser Estlands flagga ut</figcaption></div>
+                <div class="Flagga2"><img src="../../images/länder/estonia-1758823_1280.png" alt="Estland" id="flagga"><figcaption>Så här ser Estland ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
