--- a/lankar/lander/frankrike.html
+++ b/lankar/lander/frankrike.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Frankrike</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Frankrike Är ett land i västra europa som gränsar till Spanien, Belgien, Sweiz, Italien, Luxemburg, Tyskland, Andorra och Monaco. Frankrike var ett av de länderna som var med och skapade EU under de tidiga dagerna och har varit med ända sedan dess. Landet har även flera departement, eller kolonier, runt om i världen. Landet spelade även en stor del i de båda världskrigen då de var mitt i centrat av slagen.</p>
+               <div class="Flagga1"><img src="../../images/länder/Frankrike.png" alt="Frankrikes flagga" id="flagga"><figcaption>Så här ser Frankrikes flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/france-23502_1280.png" alt="Frankrike" id="flagga"><figcaption>Så här ser Frankrike ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
