--- a/lankar/lander/grekland.html
+++ b/lankar/lander/grekland.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Grekland</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Grekland är ett land i sydöstra europa på kusten till medelhavet. Landet gränsar till Turkiet, Nordmakedonien, Albanien och Bulgarien. Greklands historia och antik är känd för att ha bringat västvärldens dess utveckling och lärdom. </p>
+               <div class="Flagga1"><img src="../../images/länder/Grekland.png" alt="Greklands flagga" id="flagga"><figcaption>Så här ser Greklands flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/greece-1758825_1920.png" alt="Grekland" id="flagga"><figcaption>Så här ser Grekland ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
