--- a/lankar/lander/irland.html
+++ b/lankar/lander/irland.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Irland</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Irland är ett land i Nordvästra Europa. Landet gränsar till Nordirland som tillhör Storbrittanien men bortsett från det så är Irland en självständig ö.</p>
+               <div class="Flagga1"><img src="../../images/länder/Irland.png" alt="Irlands flagga" id="flagga"><figcaption>Så här ser Irlands flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/ireland-28617_1280.png" alt="Irland" id="flagga"><figcaption>Så här ser Irland ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
