--- a/lankar/lander/italien.html
+++ b/lankar/lander/italien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Italien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Irland är ett land i sydeuropa och kan klassas som en halvö i medelhavet. Landet gränsar till Frankrike, Österrike, Schweiz, Slovenien. Landet har även tvä enklavar inuti sig, dvs länder osm är omringade av ett annat land. Dessa länder är Vatikanstaten och San Marino. Vatikanstaten är en katolsk stat där Påven bor och därifrån den Katolska kyrkan styrs från. Italien var även ett utav de länder som var med och skapade EU under 1950-Talet.</p>
+               <div class="Flagga1"><img src="../../images/länder/Italien.png" alt="Italiens flagga" id="flagga"><figcaption>Så här ser Italiens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/italy-153961_1280.png" alt="Italien" id="flagga"><figcaption>Så här ser Italien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
