--- a/lankar/lander/kroatien.html
+++ b/lankar/lander/kroatien.html
@@ -167,7 +167,10 @@
     <div class="content">
            <div class="fakta">
                <h2>Kroatien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Kroatien är ett ett utav balkanländerna i sydöstra Europa. Landet tillhörde det forna yugoslavien och  gränsar därav till Slovienien, Bosnien och Herzegovina, Serbien, Montenegro, Serbien och ungern. Landet har kust till det Adriatiska havet, en del av medelhavet. </p>
+               <div class="Flagga1"><img src="../../images/länder/Kroatien.png" alt="Kroatiens flagga" id="flagga"><figcaption>Så här ser Kroatiens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/croatia-41391_1280.png" alt="Kroatien" id="flagga"><figcaption>Så här ser Kroatien ut</figcaption></div>
+               
            </div>
            <table class="fruta">
                <tr>
