--- a/lankar/lander/lettland.html
+++ b/lankar/lander/lettland.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Lettland</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Lettland är ett av de tre länder i Baltikum, lokaliserat på östersjöns sydöstra sida och gränsar till Estland, Vitryssland, Litauen och Ryssland. Det tillhörde länge, liksom de andra Baltiska länderna, Ryssland, men har sedan en längre tid varit självständigt.</p>
+               <div class="Flagga1"><img src="../../images/länder/Lettland.png" alt="Lettlands flagga" id="flagga"><figcaption>Så här ser Lettlands flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/latvia-1758828_640.png" alt="Lettland" id="flagga"><figcaption>Så här ser Lettland ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
