--- a/lankar/lander/luxemburg.html
+++ b/lankar/lander/luxemburg.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Luxemburg</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Luxemburg är en stat i västreuropa och gränsar till Frankrike, Belgien och Tyskland. Det är det näst minsta landet till yta samt folkmängd i EU, det enda landet som är mindre i båda områden är Malta. Landet var även ett utav de länder som var med och skapade EU under 1950-Talet.</p>
+               <div class="Flagga1"><img src="../../images/länder/Luxemburg.png" alt="Luxemburgs flagga" id="flagga"><figcaption>Så här ser Luxemburgs flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/luxembourg-1758832_640.png" alt="Luxemburg" id="flagga"><figcaption>Så här ser Luxemburg ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
