--- a/lankar/lander/malta.html
+++ b/lankar/lander/malta.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Malta</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Malta är en östat i medelhavet och är det minsta landet i EU både Folkmängds och ytmässigt. Malta kan även kallas för EU och europas sydligaste stat.</p>
+               <div class="Flagga1"><img src="../../images/länder/Malta.png" alt="Maltas flagga" id="flagga"><figcaption>Så här ser Maltas flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/malta-1758835_640.png" alt="Malta" id="flagga"><figcaption>Så här ser Malta ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
