--- a/lankar/lander/nederlanderna.html
+++ b/lankar/lander/nederlanderna.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Nederländerna</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Nederländerna är en stat i västeuropa som gränsar till Belgien och Tyskland. Landet har kust till Nordsön. Landet har sin landnivå under havsnivån i många städer, därav namnet. Nederländerna var även ett utav de länder som var med och skapade EU under 1950-Talet.</p>
+               <div class="Flagga1"><img src="../../images/länder/Nederländerna.png" alt="Nederländernas flagga" id="flagga"><figcaption>Så här ser Nederländernas flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/netherlands-1758841_640.png" alt="Nederländerna" id="flagga"><figcaption>Så här ser Nederländerna ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
