--- a/lankar/lander/osterrike.html
+++ b/lankar/lander/osterrike.html
@@ -168,8 +168,8 @@
            <div class="fakta">
                <h2>Österrike</h2>
                <p>Österrike är ett land i centraleuropa utan kust och som gränsar till Tyskland, Schweiz, Italien och Tjeckien, Slovakien, Ungern, Slovenien och Lichtenstein. Med många fina landskap från Alpernas toppar till de fina dalarna och öppna landskapen så har landet mycket att erbjuda och har därmed mycket turism. Landet har också väldigt rik historia som sträcker sig långt bak. </p>
-               <h4>Historia</h4>
-               <p>Det nuvarande Österrike bildades år 996</p>
+               <div class="Flagga1"><img src="../../images/länder/Österrike.png" alt="Österrikes flagga" id="flagga"><figcaption>Så här ser Österrikes flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/austria-1758857_640.png" alt="Österrike" id="flagga"><figcaption>Så här ser Österrike ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
