--- a/lankar/lander/polen.html
+++ b/lankar/lander/polen.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Polen</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Polen är ett land i österuropa och gränsar till Tyskland, Vitryssland, Ryssland, Tjeckien, Litauen, Ukraina och Slovakien. Landet har även Kust till östersjön i norr.</p>
+               <div class="Flagga1"><img src="../../images/länder/Polen.png" alt="Polens flagga" id="flagga"><figcaption>Så här ser Polens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/poland-1758844_640.png" alt="Polen" id="flagga"><figcaption>Så här ser Polen ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
