--- a/lankar/lander/portugal.html
+++ b/lankar/lander/portugal.html
@@ -167,11 +167,13 @@
     <div class="content">
            <div class="fakta">
                <h2>Portugal</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Portugal Är ett land i sydvästra europa och gränsar bara till Spanien. Landet har kust till Atlanten.</p>
+               <div class="Flagga1"><img src="../../images/länder/Portugal.png" alt="Portugals flagga" id="flagga"><figcaption>Så här ser Portugals flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/portugal-1758845_1280.png" alt="Portugal" id="flagga"><figcaption>Så här ser Portugal ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
-                   <th colspan="2">Portugaö</th>
+                   <th colspan="2">Portugal</th>
                </tr>
                <tr>
                    <td>Invånare:</td>
