--- a/lankar/lander/rumanien.html
+++ b/lankar/lander/rumanien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Rumänien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Rumänien är ett land i östeuropa och gränsar till Bulgarien, Mildavien, Ukraina, Ungern och serbien. Landet har även kust till Svarta havet.</p>
+               <div class="Flagga1"><img src="../../images/länder/Rumänien.png" alt="Rumäniens flagga" id="flagga"><figcaption>Så här ser Rumäniens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/romania-23560_640.png" alt="Rumänien" id="flagga"><figcaption>Så här ser Rumänien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
