--- a/lankar/lander/slovakien.html
+++ b/lankar/lander/slovakien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Slovakien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Slovakein är ett land i centrala Osteuropa och gränsar till Polen, Ukraina, Ungern, Österrike och Tjeckien. Det var även del av föredetta Tjeckoslovakien som upplöstes 1993.</p>
+               <div class="Flagga1"><img src="../../images/länder/Slovakien.png" alt="Slovakiens flagga" id="flagga"><figcaption>Så här ser Slovakeins flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/slovakia-1758917_640.png" alt="Slovakien" id="flagga"><figcaption>Så här ser Slovakien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
