--- a/lankar/lander/slovenien.html
+++ b/lankar/lander/slovenien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Slovenien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Slovenien är ett land i sydcentrala Europa och var del av det forna Jugoslavien. Landet gränsar till Italien, Kroatien, Österrike och Ungern och har ytterst lite kust till Adriatiska havet.</p>
+               <div class="Flagga1"><img src="../../images/länder/Slovenien.png" alt="Sloveniens flagga" id="flagga"><figcaption>Så här ser Sloveniens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/slovenia-1758850_640.png" alt="Slovenien" id="flagga"><figcaption>Så här ser Slovenien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
