--- a/lankar/lander/spanien.html
+++ b/lankar/lander/spanien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Spanien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Spanien är ett land i sydvästra Europa och gränsar till Portugal, Frankrike, Gibraltar och Andorra. Landet har kust till Medelhavet, Atlanden och Biscayabukten.</p>
+               <div class="Flagga1"><img src="../../images/länder/Spanien.png" alt="Spaniens flagga" id="flagga"><figcaption>Så här ser Spaniens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/spain-1758851_640.png" alt="Spanien" id="flagga"><figcaption>Så här ser Spanien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
