--- a/lankar/lander/sverige.html
+++ b/lankar/lander/sverige.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Sverige</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Sverige är ett land i norra europa. Landet ingår i de nordiska länderna samt klassas som ett av de tre skandinaviska länderna tillsammans med Norge och Danmark. Landet har Kust till Både östersjön i öst och Nordsjön i väst. Sverige gränsar till Norge och Finland, även Danmark med en sjögräns. Landet är även det tredje största landet i EU ytmässigt.</p>
+               <div class="Flagga1"><img src="../../images/länder/Sverige.png" alt="Sveriges flagga" id="flagga"><figcaption>Så här ser Sveriges flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/sweden-880120_1280.png" alt="Sverige" id="flagga"><figcaption>Så här ser Sverige ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
