--- a/lankar/lander/tjeckien.html
+++ b/lankar/lander/tjeckien.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Tjeckien</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Tjeckien är ett land i centraleuropa och gränsar till Tyskland, Polen, Österrike och Slovakien. Landet Har ingen kust. Landet ingick även i staten Tjeckoslovakien innan den upplöstes 1993.</p>
+               <div class="Flagga1"><img src="../../images/länder/Tjeckien.png" alt="Tjeckiens flagga" id="flagga"><figcaption>Så här ser Tjeckiens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/czech-republic-1758820_640.png" alt="Tjeckien" id="flagga"><figcaption>Så här ser Tjeckien ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
