--- a/lankar/lander/tyskland.html
+++ b/lankar/lander/tyskland.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Tyskland</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Tyskland är ett land i centraleuropa och gränsar till många länder; Nederländerna, Belgien, Luxemburg, Frankrike, Schweiz, Österrike, Tjeckien, Polen och Danmark. Tysklande var även ett utav de länder som var med och skapade EU under 1950-Talet, då endast Västtyskland då Landet var uppdelat i två delar, Öst och Väst-Tyskland, efter andra världskriget Landet har kust till Östersjön och nordsjön till norr. Landet delar också geografi med Alperna i söder.</p>
+               <div class="Flagga1"><img src="../../images/länder/Tyskland.png" alt="Tysklans flagga" id="flagga"><figcaption>Så här ser Tysklans flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/germany-890238_640.png" alt="Tyskland" id="flagga"><figcaption>Så här ser Tyskland ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
