--- a/lankar/lander/ungern.html
+++ b/lankar/lander/ungern.html
@@ -167,7 +167,9 @@
     <div class="content">
            <div class="fakta">
                <h2>Ungern</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Ungern är ett land i centralösteruopa och gränsar till Österrike, Slovakein, Rumänien, Serbien, Kroatien, Slovenien och Ukraina. Österrike var i början av 1900-talet en stat tillsammans med Österrike, som kallades för Österrike-Ungern. Denna stat upphördes i samband med Första världskriget.</p>
+               <div class="Flagga1"><img src="../../images/länder/Ungern.png" alt="Ungerns flagga" id="flagga"><figcaption>Så här ser Ungerns flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/hungary-1758824_640.png" alt="Ungern" id="flagga"><figcaption>Så här ser Ungern ut</figcaption></div>
            </div>
            <table class="fruta">
                <tr>
