--- a/lankar/lander/litauen.html
+++ b/lankar/lander/litauen.html
@@ -167,7 +167,10 @@
     <div class="content">
            <div class="fakta">
                <h2>Litauen</h2>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam corporis doloribus quia ipsam molestias ab, aut similique error, itaque excepturi impedit praesentium, optio illo. Unde omnis accusamus esse quia culpa!</p>
+               <p>Litauen är det södraste av de tre baltiska länderna, lokaliserat på östersjöns sydöstra sida och gränsar till Vitryssland, Polen, Lettland och Ryssland. Det tillhörde länge, liksom de andra Baltiska länderna, Ryssland, men har sedan en längre tid varit självständigt.</p>
+               <div class="Flagga1"><img src="../../images/länder/Litauen.png" alt="Litauens flagga" id="flagga"><figcaption>Så här ser Litauens flagga ut</figcaption></div>
+               <div class="Flagga2"><img src="../../images/länder/lithuania-1758831_640.png" alt="Litauen" id="flagga"><figcaption>Så här ser Litauen ut</figcaption></div>
+               
            </div>
            <table class="fruta">
                <tr>
