--- a/lankar/bilder.html
+++ b/lankar/bilder.html
@@ -168,8 +168,9 @@
         </ul>
     </nav>
     <div class="content">
-        <a href='https://www.freepik.com/vectors/icons'>Icons vector created by rawpixel.com - www.freepik.com</a>
-        BIld av <a href="https://pixabay.com/sv/users/nanto-721344/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=791018">Νικόλαος Αντωνόπουλος</a> från <a href="https://pixabay.com/sv/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=791018">Pixabay</a>
+        <p>
+            Alla flaggor är gjorda av Hannes Nilsson. Bilder på länder är gratis medladdade från <a href="https://pixabay.com/sv/">pixabay.com</a>
+        </p>
     </div>
     <footer>
         <ul class="footer">
