--- a/lankar/lander/finland.html
+++ b/lankar/lander/finland.html
@@ -167,7 +167,7 @@
     <div class="content">
            <div class="fakta">
                <h2>Finland</h2>
-               <p>Finland är ett av de Nordiska länderna lokaliserat i den norra delen av europa. Landet gränsar till Ryssland, Sverige och Norge, samt Estland som vattengräns över den Finska viken. Finland blev, efter m¨nga år, självständigt från ryssland den 6 december 1917.</p>
+               <p>Finland är ett av de Nordiska länderna lokaliserat i den norra delen av europa. Landet gränsar till Ryssland, Sverige och Norge, samt Estland som vattengräns över den Finska viken. Finland blev, efter många år, självständigt från ryssland den 6 december 1917.</p>
                <div class="Flagga1"><img src="../../images/länder/Finland.png" alt="Finlands flagga" id="flagga"><figcaption>Så här ser Finlands flagga ut</figcaption></div>
                <div class="Flagga2"><img src="../../images/länder/finland-23572_1280.png" alt="Finland" id="flagga"><figcaption>Så här ser Finland ut</figcaption></div>
                
